--- a/scss/__shop-coffins.scss
+++ b/scss/__shop-coffins.scss
@@ -94,27 +94,27 @@ $color_blue: #07111d;
 
 .shop-block {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     
     flex-wrap: wrap;
-    row-gap: 20px;
+    gap: 15px;
 
     max-width: 1200px;
     margin: 0 auto 20px auto;
 
-    &_one{
-        row-gap: 0px;
-    }
 
     &__item {
-        flex: 0 1 33%;
+        flex: 0 1 32%;
 
         display: flex;
         justify-content: center;
         
 
-        @media (max-width: 800px){
-            flex: 0 1 100%;
+        @media (max-width: 820px){
+            flex: 0 1 48%;
+        }
+        @media (max-width: 540px){
+            flex: 0 1 90%;
         }
     }
 }
