--- a/css/style.css
+++ b/css/style.css
@@ -2095,20 +2095,7 @@ body.active {
   border-radius: 7px;
 }
 
-.shop-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 15px;
-  max-width: 1200px;
-  margin: 0 auto 20px auto;
-}
-
-.shop-block__item {
+.flex_coffins {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 32%;
           flex: 0 1 32%;
@@ -2121,7 +2108,7 @@ body.active {
 }
 
 @media (max-width: 820px) {
-  .shop-block__item {
+  .flex_coffins {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 48%;
             flex: 0 1 48%;
@@ -2129,11 +2116,24 @@ body.active {
 }
 
 @media (max-width: 540px) {
-  .shop-block__item {
+  .flex_coffins {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 90%;
             flex: 0 1 90%;
   }
+}
+
+.shop-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 15px;
+  max-width: 1200px;
+  margin: 0 auto 20px auto;
 }
 
 .attention {
