--- a/scss/__shop-coffins.scss
+++ b/scss/__shop-coffins.scss
@@ -91,6 +91,18 @@ $color_blue: #07111d;
     }
 }
 
+.flex_coffins{
+    flex: 0 1 32%;
+    display: flex;
+    justify-content: center;
+        
+    @media (max-width: 820px){
+        flex: 0 1 48%;
+    }
+    @media (max-width: 540px){
+        flex: 0 1 90%;
+    }
+}
 
 .shop-block {
     display: flex;
@@ -102,20 +114,8 @@ $color_blue: #07111d;
     max-width: 1200px;
     margin: 0 auto 20px auto;
 
-
     &__item {
-        flex: 0 1 32%;
-
-        display: flex;
-        justify-content: center;
         
-
-        @media (max-width: 820px){
-            flex: 0 1 48%;
-        }
-        @media (max-width: 540px){
-            flex: 0 1 90%;
-        }
     }
 }
 
