--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,7 @@ $color_blue: #07111d;
 @import '__cremation';
 @import '__ritual-agent';
 @import '__shop-coffins';
-
-
+@import '__shop-wreaths';
 
 @import '__footer';
 
