--- a/scss/__shop-coffins.scss
+++ b/scss/__shop-coffins.scss
@@ -53,17 +53,20 @@ $color_blue: #07111d;
     &__img{
         position: relative;
         width: 100%;
+        height: 100%;   
+    }
+    &__img_height{
         padding: 0px 0px 80% 0px;
     }
     &__img img{
         position: absolute;
         top: 50%;
-        left: 0;
-        transform: translate(0, -50%);
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-        object-fit: cover;
+        object-fit: contain;
         width: 100%;
-        
+        height: 100%;
         padding: 0px 10px 0px 10px;
     }
 
