--- a/scss/__shop-wreaths.scss
+++ b/scss/__shop-wreaths.scss
@@ -1,6 +1,6 @@
 
 .flex-wreaths{
-    flex: 0 1 32%;
+    flex: 0 1 22%;
     display: flex;
     justify-content: center;
         
@@ -10,4 +10,8 @@
     @media (max-width: 540px){
         flex: 0 1 90%;
     }
+}
+
+.card__img_height-wreaths{
+    padding: 0px 0px 170% 0px;
 }
