--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,5 +11,10 @@ $color_blue: #07111d;
 @import '__shop-coffins';
 @import '__shop-wreaths';
 
+@import '__shop-baskets';
+@import '__shop-crosses';
+@import '__shop-clothes';
+@import '__shop-payment';
+
 @import '__footer';
 
