--- a/css/style.css
+++ b/css/style.css
@@ -2095,7 +2095,7 @@ body.active {
   color: #fff;
   background-color: #ba9f5a;
   text-align: center;
-  padding: 10px 0px 10px 0px;
+  padding: 7px 0px 7px 0px;
   margin: 0px 20px 0px 20px;
   border-radius: 7px;
 }
@@ -2187,6 +2187,38 @@ body.active {
 }
 
 .card__img_height-wreaths {
+  padding: 0px 0px 170% 0px;
+}
+
+.flex-baskets {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 22%;
+          flex: 0 1 22%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 820px) {
+  .flex-baskets {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 48%;
+            flex: 0 1 48%;
+  }
+}
+
+@media (max-width: 540px) {
+  .flex-baskets {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 90%;
+            flex: 0 1 90%;
+  }
+}
+
+.card__img_height-baskets {
   padding: 0px 0px 170% 0px;
 }
 
