--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ $color_blue: #07111d;
 @import '__shop-crosses';
 @import '__shop-clothes';
 @import '__shop-payment';
+@import '__information';
 
 @import '__footer';
 
