--- a/css/style.css
+++ b/css/style.css
@@ -2254,6 +2254,133 @@ body.active {
   padding: 0px 0px 135% 0px;
 }
 
+.flex-crosses {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 22%;
+          flex: 0 1 22%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 820px) {
+  .flex-crosses {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 48%;
+            flex: 0 1 48%;
+  }
+}
+
+@media (max-width: 540px) {
+  .flex-crosses {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 90%;
+            flex: 0 1 90%;
+  }
+}
+
+.card__img_height-crosses {
+  padding: 0px 0px 135% 0px;
+}
+
+.container_1240 {
+  margin: 0 auto;
+  padding: 0px 20px 40px 20px;
+  max-width: 1240px;
+}
+
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 20px;
+}
+
+.info__box {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 32%;
+          flex: 0 1 32%;
+  min-width: 350px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 7px;
+}
+
+.info__img {
+  padding: 0px 0px 66.666% 0px;
+}
+
+.info__img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.199);
+}
+
+.info__img:hover img {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.info__img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.info__title {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 3;
+  width: 100%;
+  padding: 20px 0px 20px 20px;
+  background-color: rgba(0, 0, 0, 0.445);
+  font-family: 'Montserrat';
+  color: #fff;
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 120%;
+  text-transform: uppercase;
+}
+
+@media (max-width: 1910px) {
+  .info__title {
+    font-size: calc(17px + 4 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .info__title {
+    font-size: 17px;
+  }
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
