--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,12 +10,12 @@ $color_blue: #07111d;
 @import '__ritual-agent';
 @import '__shop-coffins';
 @import '__shop-wreaths';
-
 @import '__shop-baskets';
 @import '__shop-crosses';
 @import '__shop-clothes';
 @import '__shop-payment';
 @import '__information';
-
+@import '__morgues-in-minsk';
+@import '__reviews';
+@import '__contacts';
 @import '__footer';
-
