--- a/css/style.css
+++ b/css/style.css
@@ -2421,6 +2421,56 @@ body.active {
   width: 20%;
 }
 
+.reviews {
+  max-width: 1200px;
+  margin: 0 auto 40px auto;
+  padding: 0px 10px 0px 10px;
+}
+
+.reviews__box {
+  padding: 10px 10px 10px 20px;
+  border-left: #ba9f5a 3px solid;
+}
+
+.reviews__quotes img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: auto;
+  height: 50px;
+  margin: 0px 0px 5px 0px;
+}
+
+.reviews__text {
+  font-family: 'Montserrat';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 170%;
+  color: #5B5B5B;
+  margin: 0px 0px 10px 0px;
+}
+
+.reviews__name {
+  font-family: 'Montserrat';
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 140%;
+  color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+.reviews__stars img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: auto;
+  height: 20px;
+}
+
+.map__google {
+  width: 100%;
+  height: 400px;
+  border: 0;
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
