--- a/css/style.css
+++ b/css/style.css
@@ -2471,6 +2471,305 @@ body.active {
   border: 0;
 }
 
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 1220px;
+  margin: 60px auto 60px auto;
+  padding: 0px 10px 0px 10px;
+}
+
+.contacts__info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  padding: 10px;
+}
+
+@media (max-width: 1020px) {
+  .contacts__info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 70%;
+            flex: 0 1 70%;
+  }
+}
+
+@media (max-width: 700px) {
+  .contacts__info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 80%;
+            flex: 0 1 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .contacts__info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+}
+
+.contacts__title {
+  font-family: "Yeseva One";
+  color: #000;
+  font-size: 27px;
+  line-height: 140%;
+  margin: 0px 0px 80px 0px;
+  position: relative;
+}
+
+@media (max-width: 1910px) {
+  .contacts__title {
+    font-size: calc(21px + 6 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .contacts__title {
+    font-size: 21px;
+  }
+}
+
+.contacts__title::before {
+  content: '';
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  height: 3px;
+  width: 50%;
+  background-color: #ba9f5a;
+}
+
+.contacts__text {
+  font-family: 'Montserrat';
+  color: #5B5B5B;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+  margin: 0px 0px 40px 0px;
+}
+
+.contacts__tel {
+  display: inline-block;
+  font-family: 'Montserrat';
+  color: #5B5B5B;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+  margin: 0px 0px 10px 0px;
+  padding: 20px 0px 20px 50px;
+  position: relative;
+}
+
+.contacts__tel::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 0;
+  height: 35px;
+  width: 35px;
+  background-image: url("../img/__contacts/icon-phone.svg");
+}
+
+.contacts__map {
+  font-family: 'Montserrat';
+  color: #5B5B5B;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+  margin: 0px 0px 10px 0px;
+  padding: 20px 0px 20px 50px;
+  position: relative;
+}
+
+.contacts__map::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 0;
+  height: 35px;
+  width: 35px;
+  background-image: url("../img/__contacts/icom-map.svg");
+}
+
+.contacts__mail {
+  font-family: 'Montserrat';
+  color: #5B5B5B;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+  margin: 0px 0px 10px 0px;
+  padding: 20px 0px 20px 50px;
+  position: relative;
+}
+
+.contacts__mail::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 0;
+  height: 35px;
+  width: 35px;
+  background: url("../img/__contacts/icon-mail.svg") no-repeat;
+  background-position: 50%;
+  background-size: contain;
+}
+
+.contacts__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 1020px) {
+  .contacts__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 70%;
+            flex: 0 1 70%;
+  }
+}
+
+@media (max-width: 700px) {
+  .contacts__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 80%;
+            flex: 0 1 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .contacts__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 90%;
+            flex: 0 1 90%;
+  }
+}
+
+.contacts__img-box {
+  padding: 0px 0px 80% 0px;
+  position: relative;
+}
+
+.contacts__img-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.466);
+}
+
+.contacts__img-box img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top center;
+     object-position: top center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.contacts__time-work {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  width: 100%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.contacts__img-title {
+  font-family: "Yeseva One";
+  text-align: center;
+  color: #fff;
+  font-size: 35px;
+  line-height: 140%;
+  width: 100%;
+  margin: 0px 0px 40px 0px;
+  position: relative;
+}
+
+@media (max-width: 1910px) {
+  .contacts__img-title {
+    font-size: calc(27px + 8 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .contacts__img-title {
+    font-size: 27px;
+  }
+}
+
+.contacts__img-title::before {
+  content: '';
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  height: 3px;
+  width: 50%;
+  background-color: #ba9f5a;
+}
+
+.contacts__img-24 {
+  font-family: 'Montserrat';
+  text-align: center;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 140%;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1910px) {
+  .contacts__img-24 {
+    font-size: calc(20px + 5 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .contacts__img-24 {
+    font-size: 20px;
+  }
+}
+
+.contacts__img-all {
+  font-family: 'Montserrat';
+  text-align: center;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 140%;
+}
+
+@media (max-width: 1910px) {
+  .contacts__img-all {
+    font-size: calc(20px + 5 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .contacts__img-all {
+    font-size: 20px;
+  }
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
