--- a/scss/__main.scss
+++ b/scss/__main.scss
@@ -2,12 +2,18 @@ $color_golg: #ba9f5a;
 $color_text: #5B5B5B;
 $color_blue: #07111d;
 
+.container_img{
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 .coffin-img {
     
-    margin: 0 100px;
+    padding: 0px 20px 0px 20px;
 
     @media (max-width: 1200px){
         margin: 0;
+        padding: 0;
     }
 
     & img{
@@ -19,6 +25,7 @@ $color_blue: #07111d;
 
 //= блок соболезнуем 
 .box-text {
+    //max-width: 1400px;
     display: flex;
 
     align-items: center;
