--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
@@ -618,7 +617,7 @@ body.active {
 }
 
 .container_img {
-  max-width: 1400px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -641,22 +640,19 @@ body.active {
 }
 
 .box-text {
+  max-width: 1400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0px 0px 40px 0px;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
 }
 
 .box-text__span {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%;
+      -ms-flex: 0 1 35%;
+          flex: 0 1 35%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -666,10 +662,25 @@ body.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0px 0px 25% 0px;
-  background-color: #ba9f5ae7;
-  margin: -100px 150px 0px 0px;
-  position: relative;
+  padding: 1.5em;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+}
+
+@media (max-width: 1910px) {
+  .box-text__span {
+    font-size: calc(19px + 8 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .box-text__span {
+    font-size: 19px;
+  }
 }
 
 @media (max-width: 1500px) {
@@ -693,66 +704,38 @@ body.active {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 80%;
             flex: 0 1 80%;
-    padding: 0px 0px 15em 0px;
-    margin: -50px auto 0px auto;
   }
 }
 
 @media (max-width: 770px) {
   .box-text__span {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 80%;
-            flex: 0 1 80%;
-    padding: 0px 0px 15em 0px;
+        -ms-flex: 0 1 90%;
+            flex: 0 1 90%;
+  }
+}
+
+.box_margin {
+  margin: 0px auto 40px auto;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.span_margin {
+  margin: -100px 100px 0px 0px;
+  background-color: #ba9f5ae7;
+}
+
+@media (max-width: 1200px) {
+  .span_margin {
     margin: -50px auto 0px auto;
   }
 }
 
-.box-text__span::before {
-  content: "Искренне соболезнуем Вам, если Вас коснулось горе. Предлагаем и оказываем Все виды ритуальных услуг на протяжении более, чем 17 лет.";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translate(0, -50%);
-      -ms-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  padding: 2em;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 30px;
-  line-height: 140%;
-  font-weight: 500;
-  color: #fff;
-  text-align: center;
-}
-
-@media (max-width: 1910px) {
-  .box-text__span::before {
-    font-size: calc(17px + 13 * (100vw - 375px) / 1535);
-  }
-}
-
-@media (max-width: 375px) {
-  .box-text__span::before {
-    font-size: 17px;
-  }
-}
-
-.box-text__span::after {
-  content: '';
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  width: 30%;
-  height: 3px;
-  background-color: #fff;
-}
-
-@media (max-width: 600px) {
-  .box-text__span::after {
-    height: 0;
+@media (max-width: 770px) {
+  .span_margin {
+    margin: -50px auto 0px auto;
   }
 }
 
@@ -768,12 +751,19 @@ body.active {
           column-gap: 20px;
   row-gap: 40px;
   max-width: 1200px;
-  margin: -200px auto 20px auto;
+  margin: -100px auto -100px auto;
+}
+
+@media (max-width: 1500px) {
+  .multi {
+    margin: -100px auto 20px auto;
+  }
 }
 
 @media (max-width: 1200px) {
   .multi {
-    margin: 0px 20px 20px 20px;
+    margin: 0px;
+    padding: 0px 20px 20px 20px;
   }
 }
 
@@ -790,7 +780,7 @@ body.active {
   height: 100%;
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1100px) {
   .multi__item {
     height: auto;
   }
@@ -826,7 +816,7 @@ body.active {
   margin: 200px 0px 0px 0px;
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1100px) {
   .cart_margin-2 {
     margin: 0;
   }
@@ -836,7 +826,7 @@ body.active {
   margin: 400px 0px 0px 0px;
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1100px) {
   .cart_margin-3 {
     margin: 0;
   }
@@ -895,234 +885,20 @@ body.active {
   border-radius: 3px;
 }
 
-.box-text-2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.box_margin-2 {
+  margin: 0px auto 0px auto;
+}
+
+.span_margin-2 {
   position: relative;
   z-index: 2;
-  margin: 0px 0px 20px 0px;
-}
-
-.box-text-2__span-2 {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0px 0px 25% 0px;
-  background-color: rgba(0, 0, 0, 0.781);
-  margin: 0px 0px -100px 150px;
-  position: relative;
-}
-
-@media (max-width: 1500px) {
-  .box-text-2__span-2 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 40%;
-            flex: 0 1 40%;
-  }
-}
-
-@media (max-width: 1500px) {
-  .box-text-2__span-2 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
+  background-color: #000000bb;
+  margin: 0px 0px -100px 100px;
 }
 
 @media (max-width: 1200px) {
-  .box-text-2__span-2 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 80%;
-            flex: 0 1 80%;
-    padding: 0px 0px 15em 0px;
-    margin: 0px auto -100px auto;
-  }
-}
-
-@media (max-width: 770px) {
-  .box-text-2__span-2 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 80%;
-            flex: 0 1 80%;
-    padding: 0px 0px 15em 0px;
-    margin: 0px auto -100px auto;
-  }
-}
-
-.box-text-2__span-2::before {
-  content: "Кроме финансовой составляющей, нами безусловно движет то, что люди благодарят нас за оказанные услуги и рекомендуют нас знакомым…";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translate(0, -50%);
-      -ms-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  padding: 2em;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 30px;
-  line-height: 140%;
-  font-weight: 500;
-  color: #fff;
-  text-align: center;
-}
-
-@media (max-width: 1910px) {
-  .box-text-2__span-2::before {
-    font-size: calc(16px + 14 * (100vw - 375px) / 1535);
-  }
-}
-
-@media (max-width: 375px) {
-  .box-text-2__span-2::before {
-    font-size: 14px;
-  }
-}
-
-.box-text-2__span-2::after {
-  content: '';
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  width: 30%;
-  height: 3px;
-  background-color: #fff;
-}
-
-@media (max-width: 600px) {
-  .box-text-2__span-2::after {
-    height: 0;
-  }
-}
-
-.box-text-3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0px 0px 40px 0px;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.box-text-3__span-3 {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0px 0px 25% 0px;
-  background-color: #ba9f5ae7;
-  margin: -100px 150px 0px 0px;
-  position: relative;
-}
-
-@media (max-width: 1500px) {
-  .box-text-3__span-3 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 40%;
-            flex: 0 1 40%;
-  }
-}
-
-@media (max-width: 1500px) {
-  .box-text-3__span-3 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
-}
-
-@media (max-width: 1200px) {
-  .box-text-3__span-3 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 80%;
-            flex: 0 1 80%;
-    padding: 0px 0px 15em 0px;
-    margin: -50px auto 0px auto;
-  }
-}
-
-@media (max-width: 770px) {
-  .box-text-3__span-3 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 80%;
-            flex: 0 1 80%;
-    padding: 0px 0px 10em 0px;
-    margin: -50px auto 0px auto;
-  }
-}
-
-.box-text-3__span-3::before {
-  content: "Если у Вас, есть какие-либо вопросы относительно наших услуг, пожалуйста, свяжитесь с нами.";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translate(0, -50%);
-      -ms-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  padding: 1em 2em 1em 2em;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 30px;
-  line-height: 140%;
-  font-weight: 500;
-  color: #fff;
-  text-align: center;
-}
-
-@media (max-width: 1910px) {
-  .box-text-3__span-3::before {
-    font-size: calc(16px + 14 * (100vw - 375px) / 1535);
-  }
-}
-
-@media (max-width: 375px) {
-  .box-text-3__span-3::before {
-    font-size: 14px;
-  }
-}
-
-.box-text-3__span-3::after {
-  content: '';
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  width: 30%;
-  height: 3px;
-  background-color: #fff;
-}
-
-@media (max-width: 600px) {
-  .box-text-3__span-3::after {
-    height: 0;
+  .span_margin-2 {
+    margin: 0px auto -50px auto;
   }
 }
 
@@ -1540,6 +1316,7 @@ body.active {
 
 .box-prais {
   padding: 20px 40px 20px 40px;
+  margin: 0px 0px 40px 0px;
   background: #636363 url(../img/home/texture.jpg);
 }
 
