--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,4 +18,5 @@ $color_blue: #07111d;
 @import '__morgues-in-minsk';
 @import '__reviews';
 @import '__contacts';
+@import '__calc';
 @import '__footer';
