--- a/scss/__calc.scss
+++ b/scss/__calc.scss
@@ -209,7 +209,8 @@ $color_blue: #07111d;
 .more{
     background-color: $color_golg;
     color: #fff;
-    padding: 20px 0px 20px 0px;
+    padding: 10px 0px 10px 0px;
+    border-radius: 7px;
     font-size: 20px;
     text-align: center;
     margin:0px 0px 20px 0px;
