--- a/scss/__calc.scss
+++ b/scss/__calc.scss
@@ -112,7 +112,7 @@ $color_blue: #07111d;
         }
     }
 }
-.wreath, .dress {
+.wreath, .dress, .cross {
     display: flex;
     flex-direction: column;
 
